Rev.3 - Вынес микросервис user-service и исправил main-service до рабочего варианта